--- a/Content/PhotoWizardIntro.htm
+++ b/Content/PhotoWizardIntro.htm
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>PhotoWizard Introduction</h1>
+        <h1>Introducing PhotoWizard</h1>
         <p>Delete this text and replace it with your own content.</p>
     </body>
 </html>
