added p.codesample style to css

--- a/Content/PhotoWizardIntro.htm
+++ b/Content/PhotoWizardIntro.htm
@@ -46,6 +46,10 @@
         <h6>Heading 6</h6>
         <p>&#160;</p>
         <p>More text for section 6</p>
+        <p class="codesample">This is a code sample</p>
+        <p class="codesample">some more Code</p>
+        <p>&#160;</p>
+        <p>&#160;</p>
         <p>&#160;</p>
         <p>&#160;</p>
     </body>
