--- a/Content/CroppingTheImage.htm
+++ b/Content/CroppingTheImage.htm
@@ -4,6 +4,10 @@
     </head>
     <body>
         <h1>Cropping the Image</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>Importing a sample image and applying our img.standard style</p>
+        <p>
+            <img src="Resources/Images/SampleImagePW - 1.jpeg" class="standard" />
+        </p>
+        <p>&#160;</p>
     </body>
 </html>
