--- a/Content/EditingAnImageWithFilters.htm
+++ b/Content/EditingAnImageWithFilters.htm
@@ -5,5 +5,10 @@
     <body>
         <h1>Editing an Image With Filters</h1>
         <p>Delete this text and replace it with your own content.</p>
+        <p>&#160;</p>
+        <p>
+            <img src="Resources/Images/PhotoWizardCaps - 4.jpeg" class="thumbnail" />
+        </p>
+        <p>&#160;</p>
     </body>
 </html>
