Concept Topic What is image blending

--- a/Content/WhatIsImageBlending.htm
+++ b/Content/WhatIsImageBlending.htm
@@ -4,6 +4,52 @@
     </head>
     <body>
         <h1>What is Image Blending?</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>Image blending allows you to combine two images using various tools and techniques. </p>
+        <p>Below are the key features and steps:
+</p>
+        <p>(show two separate images and then combined image)
+</p>
+        <h2>Key Features
+</h2>
+        <ul>
+            <li>
+                <p><b>Combine Images:</b> You can combine two images using this tool.
+</p>
+            </li>
+            <li>
+                <p><b>Touch Gestures:</b> Use touch gestures to move and rotate the foreground image.
+</p>
+            </li>
+            <li>
+                <p><b>Fit Images:</b> Adjust the foreground image to fit the background image from settings.
+</p>
+            </li>
+            <li>
+                <p><b>Blending Modes:</b> Combine images using different blending modes.
+</p>
+            </li>
+            <li>
+                <p><b>Adjust Transparency:</b> Modify the transparency of the foreground image.
+</p>
+            </li>
+        </ul>
+        <h2>Using Masks
+</h2>
+        <ul>
+            <li>
+                <p><b>Transparent Masks:</b> If you have masked the image already, the masked portion will be transparent if chosen as the foreground image.
+</p>
+            </li>
+            <li>
+                <p><b>Superimpose Images:</b> Use masks to superimpose part of an image on top of another.
+</p>
+                <p>&#160;</p>
+                <p>By utilizing these features, you can create a seamless integration of multiple images into a single composition
+</p>
+            </li>
+        </ul>
+        <p>&#160;</p>
+        <p>
+            <MadCap:xref href="BlendingTwoImages.htm">Blending Two Images</MadCap:xref> <a href="BlendingModeList.htm">Blending Mode List</a></p>
     </body>
 </html>
