Blend Images Section

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -4,6 +4,45 @@
     </head>
     <body>
         <h1>Blending Two Images</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <h2>Load Images</h2>
+        <p>&#160;</p>
+        <ol>
+            <li>
+                <p>First select Tools <img src="Resources/Images/PW_BlendImages_Step1.png" class="thumbnail" style="width: 39px;height: 46px;" /></p>
+            </li>
+            <li>
+                <p>Next select Blend Images</p>
+            </li>
+            <li>
+                <p>Then from Blend Image toolbar select second image . <img src="Resources/Images/BlendImageToolbar.png" class="thumbnail" /></p>
+            </li>
+            <li>
+                <p>You now have two images to work with. Re-size and reposition the image with the handles <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" /></p>
+            </li>
+        </ol>
+        <p>&#160;</p>
+        <h2>Adjust Image Settings</h2>
+        <ol>
+            <li>
+                <p>Select triangle with three Dots to bring up Image options.<img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" /> </p>
+                <ol style="list-style-type: lower-alpha;">
+                    <li>
+                        <p>Reset</p>
+                    </li>
+                    <li>
+                        <p>Scale Fit </p>
+                    </li>
+                    <li>
+                        <p>Swap</p>
+                    </li>
+                    <li>
+                        <p>Aspect Lock</p>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <p>&#160;</p>
+            </li>
+        </ol>
     </body>
 </html>
