--- a/Content/WhatIsImageBlending.htm
+++ b/Content/WhatIsImageBlending.htm
@@ -50,6 +50,10 @@
         </ul>
         <p>&#160;</p>
         <p>
-            <MadCap:xref href="BlendingTwoImages.htm">Blending Two Images</MadCap:xref> <a href="BlendingModeList.htm">Blending Mode List</a></p>
+            <MadCap:xref href="BlendingTwoImages.htm">Blending Two Images</MadCap:xref> </p>
+        <p><a href="BlendingModeList.htm">Blending Mode List </a> </p>
+        <p>
+            <MadCap:xref href="CreatingAnImageMask.htm">Creating an Image Mask</MadCap:xref>
+        </p>
     </body>
 </html>
