--- a/Content/BlendingModeList.htm
+++ b/Content/BlendingModeList.htm
@@ -4,6 +4,94 @@
     </head>
     <body>
         <h1>Blending Mode List</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>PhotoWizard uses standard blending modes found in Photoshop and other image editing software. </p>
+        <p>&#160;</p>
+        <p>Below is a brief explanation of each mode:
+</p>
+        <p>&#160;</p>
+        <ul>
+            <li>
+                <p><b>Normal:</b> No blending. The top layer covers the bottom layer.
+</p>
+            </li>
+            <li>
+                <p><b>Multiply:</b> Darkens the image by multiplying the bottom layer with the top layer. The result is always darker.
+</p>
+            </li>
+            <li>
+                <p><b>Screen:</b> Lightens the image by inverting, multiplying, and inverting again. The result is always lighter.
+</p>
+            </li>
+            <li>
+                <p><b>Overlay:</b> Combines Multiply and Screen modes. It darkens dark areas and lightens light areas.
+</p>
+            </li>
+            <li>
+                <p><b>Darken:</b> Compares each pixel of the two layers and keeps the darkest one.
+</p>
+            </li>
+            <li>
+                <p><b>Lighten:</b> Compares each pixel of the two layers and keeps the lightest one.
+</p>
+            </li>
+            <li>
+                <p><b>Dodge (Colour Dodge):</b> Brightens the bottom layer based on the brightness of the top layer.
+</p>
+            </li>
+            <li>
+                <p><b>Burn (Colour Burn):</b> Darkens the bottom layer based on the brightness of the top layer.
+</p>
+            </li>
+            <li>
+                <p><b>Soft Light:</b> Softens the image by darkening or lightening it, depending on the top layer.
+</p>
+            </li>
+            <li>
+                <p><b>Hard Light:</b> Adds harsh contrast by combining Multiply and Screen. It results in intense effects.
+</p>
+            </li>
+            <li>
+                <p><b>Difference:</b> Subtracts the top layer from the bottom layer or vice versa, to get the absolute difference.
+</p>
+            </li>
+            <li>
+                <p><b>Exclusion:</b> Similar to Difference but with lower contrast.
+</p>
+            </li>
+            <li>
+                <p><b>Hue:</b> Applies the hue (colour) of the top layer while keeping the brightness and saturation of the bottom layer.
+</p>
+            </li>
+            <li>
+                <p><b>Saturation:</b> Applies the saturation of the top layer while keeping the hue and brightness of the bottom layer.
+</p>
+            </li>
+            <li>
+                <p><b>Colour:</b> Applies the hue and saturation of the top layer while keeping the brightness of the bottom layer.
+</p>
+            </li>
+            <li>
+                <p><b>Luminosity:</b> Applies the brightness (luminosity) of the top layer while keeping the hue and saturation of the bottom layer.
+</p>
+            </li>
+            <li>
+                <p><b>Darken Only:</b> Similar to Darken but more intense.
+</p>
+            </li>
+            <li>
+                <p><b>Lighten Only:</b> Similar to Lighten but more intense.
+</p>
+            </li>
+        </ul>
+        <p>&#160;</p>
+        <p>These modes are essential for creating various effects and achieving precise control over the blending of images.
+</p>
+        <p>&#160;</p>
+        <p>
+            <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending?</MadCap:xref>
+        </p>
+        <p>
+            <MadCap:xref href="BlendingTwoImages.htm">Blending Two Images</MadCap:xref>
+        </p>
     </body>
 </html>
