styling linkes, Flare Lesson 8

--- a/Content/WhatIsMasking.htm
+++ b/Content/WhatIsMasking.htm
@@ -5,5 +5,11 @@
     <body>
         <h1>What is Masking?</h1>
         <p>Delete this text and replace it with your own content.</p>
+        <p>
+            <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending? </MadCap:xref>
+        </p>
+        <p>
+            <MadCap:xref href="ImageMaskPrecisionEditing.htm">Using Image Mask for Precision Editing</MadCap:xref>
+        </p>
     </body>
 </html>
