Flare lesson 9, Adding and Styling Tables

--- a/Content/TestTopic.htm
+++ b/Content/TestTopic.htm
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
+        <link href="Resources/TableStyles/PWTableStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
         <h1>Test Topic for Flare Lessons</h1>
@@ -15,5 +16,34 @@
                 <p>&#160;</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
+        <h2>Adding and Stying Tables</h2>
+        <table style="mc-table-style: url('Resources/TableStyles/PWTableStyle.css');width: 66%;" class="TableStyle-PWTableStyle" cellspacing="0">
+            <col style="width: 50%;" class="TableStyle-PWTableStyle-Column-Column1" />
+            <col style="width: 50%;" class="TableStyle-PWTableStyle-Column-Column1" />
+            <thead>
+                <tr class="TableStyle-PWTableStyle-Head-Header1">
+                    <th class="TableStyle-PWTableStyle-HeadE-Column1-Header1">Short Cut</th>
+                    <th class="TableStyle-PWTableStyle-HeadD-Column1-Header1">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">CTRL+S</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Save the current tab.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2">SHIFT+CTRL+S</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Save all open tabs.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">CRTL+T</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Open the Add File dialog</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyB-Column1-Body2">CTRL+N</td>
+                    <td class="TableStyle-PWTableStyle-BodyA-Column1-Body2">Starts the New Project Wizard</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
