converted Mode bullet list into table

--- a/Content/BlendingModeList.htm
+++ b/Content/BlendingModeList.htm
@@ -1,91 +1,119 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
+        <link href="Resources/TableStyles/PWTableStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
         <h1>Blending Mode List</h1>
         <p>PhotoWizard uses standard blending modes found in Photoshop and other image editing software. </p>
         <p>&#160;</p>
-        <p>Below is a brief explanation of each mode:
+        <p>These modes are essential for creating various effects and achieving precise control over the blending of images.</p>
+        <p>&#160;</p>
+        <p>The following table contains a brief explanation of each mode:
 </p>
         <p>&#160;</p>
-        <ul>
-            <li>
-                <p><b>Normal:</b> No blending. The top layer covers the bottom layer.
-</p>
-            </li>
-            <li>
-                <p><b>Multiply:</b> Darkens the image by multiplying the bottom layer with the top layer. The result is always darker.
-</p>
-            </li>
-            <li>
-                <p><b>Screen:</b> Lightens the image by inverting, multiplying, and inverting again. The result is always lighter.
-</p>
-            </li>
-            <li>
-                <p><b>Overlay:</b> Combines Multiply and Screen modes. It darkens dark areas and lightens light areas.
-</p>
-            </li>
-            <li>
-                <p><b>Darken:</b> Compares each pixel of the two layers and keeps the darkest one.
-</p>
-            </li>
-            <li>
-                <p><b>Lighten:</b> Compares each pixel of the two layers and keeps the lightest one.
-</p>
-            </li>
-            <li>
-                <p><b>Dodge (Colour Dodge):</b> Brightens the bottom layer based on the brightness of the top layer.
-</p>
-            </li>
-            <li>
-                <p><b>Burn (Colour Burn):</b> Darkens the bottom layer based on the brightness of the top layer.
-</p>
-            </li>
-            <li>
-                <p><b>Soft Light:</b> Softens the image by darkening or lightening it, depending on the top layer.
-</p>
-            </li>
-            <li>
-                <p><b>Hard Light:</b> Adds harsh contrast by combining Multiply and Screen. It results in intense effects.
-</p>
-            </li>
-            <li>
-                <p><b>Difference:</b> Subtracts the top layer from the bottom layer or vice versa, to get the absolute difference.
-</p>
-            </li>
-            <li>
-                <p><b>Exclusion:</b> Similar to Difference but with lower contrast.
-</p>
-            </li>
-            <li>
-                <p><b>Hue:</b> Applies the hue (colour) of the top layer while keeping the brightness and saturation of the bottom layer.
-</p>
-            </li>
-            <li>
-                <p><b>Saturation:</b> Applies the saturation of the top layer while keeping the hue and brightness of the bottom layer.
-</p>
-            </li>
-            <li>
-                <p><b>Colour:</b> Applies the hue and saturation of the top layer while keeping the brightness of the bottom layer.
-</p>
-            </li>
-            <li>
-                <p><b>Luminosity:</b> Applies the brightness (luminosity) of the top layer while keeping the hue and saturation of the bottom layer.
-</p>
-            </li>
-            <li>
-                <p><b>Darken Only:</b> Similar to Darken but more intense.
-</p>
-            </li>
-            <li>
-                <p><b>Lighten Only:</b> Similar to Lighten but more intense.
-</p>
-            </li>
-        </ul>
-        <p>&#160;</p>
-        <p>These modes are essential for creating various effects and achieving precise control over the blending of images.
-</p>
+        <table style="mc-table-style: url('Resources/TableStyles/PWTableStyle.css');width: 75%;" class="TableStyle-PWTableStyle" cellspacing="0">
+            <col style="width: 20%;" class="TableStyle-PWTableStyle-Column-Column1" />
+            <col style="width: 50%;" class="TableStyle-PWTableStyle-Column-Column1" />
+            <thead>
+                <tr class="TableStyle-PWTableStyle-Head-Header1">
+                    <th class="TableStyle-PWTableStyle-HeadE-Column1-Header1">Mode</th>
+                    <th class="TableStyle-PWTableStyle-HeadD-Column1-Header1">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Normal</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">No blending. The top layer covers the bottom layer.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2"><b>Multiply</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Darkens the image by multiplying the bottom layer with the top layer. The result is always darker.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Screen</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Lightens the image by inverting, multiplying, and inverting again. The result is always lighter.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2"><b>Overlay</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Combines Multiply and Screen modes. It darkens dark areas and lightens light areas.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Darken</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Compares each pixel of the two layers and keeps the darkest one.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2"><b>Lighten</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Compares each pixel of the two layers and keeps the lightest one.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Dodge (Colour Dodge)</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Brightens the bottom layer based on the brightness of the top layer.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2"><b>Burn (Colour Burn)</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Darkens the bottom layer based on the brightness of the top layer.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Soft Light</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Softens the image by darkening or lightening it, depending on the top layer.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2"><b>Hard Light</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Adds harsh contrast by combining Multiply and Screen. It results in intense effects.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Difference</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Subtracts the top layer from the bottom layer or vice versa, to get the absolute difference.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2"><b>Exclusion</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Simlar to Difference but with lower contrast.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Saturation</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Applies the saturation of the top layer while keeping the hue and brightness of the bottom layer.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2"><b>Hue</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Applies the hue (colour) of the top layer while keeping the brightness and saturation of the bottom layer.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Colour</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Applies the hue and saturation of the top layer while keeping the brightness of the bottom layer.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2"><b>Luminosity</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Applies the brightness (luminosity) of the top layer while keeping the hue and saturation of the bottom layer.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Darken Only</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Similar to Darken but more intense.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyB-Column1-Body2"><b>Lighten Only</b>
+                    </td>
+                    <td class="TableStyle-PWTableStyle-BodyA-Column1-Body2">Similar to Lighten but more intense.</td>
+                </tr>
+            </tbody>
+        </table>
         <p>&#160;</p>
         <p>
             <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending?</MadCap:xref>
