table styles and image blending topic

--- a/Content/BlendingModeList.htm
+++ b/Content/BlendingModeList.htm
@@ -115,6 +115,7 @@
             </tbody>
         </table>
         <p>&#160;</p>
+        <h3>Related Topics</h3>
         <p>
             <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending?</MadCap:xref>
         </p>
