--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
+        <link href="Resources/TableStyles/PWTableStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
         <h1>Blending Two Images</h1>
@@ -17,7 +18,7 @@
                 <p>Then from Blend Image toolbar select second image . <img src="Resources/Images/BlendImageToolbar.png" class="thumbnail" /></p>
             </li>
             <li>
-                <p>You now have two images to work with. Re-size and reposition the image with the handles <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" /></p>
+                <p>You now have two images to work with. Re-size, rotate, and reposition the image with the handles <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" /></p>
             </li>
         </ol>
         <p>&#160;</p>
@@ -25,24 +26,37 @@
         <ol>
             <li>
                 <p>Select triangle with three Dots to bring up Image options.<img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" /> </p>
-                <ol style="list-style-type: lower-alpha;">
-                    <li>
-                        <p>Reset</p>
-                    </li>
-                    <li>
-                        <p>Scale Fit </p>
-                    </li>
-                    <li>
-                        <p>Swap</p>
-                    </li>
-                    <li>
-                        <p>Aspect Lock</p>
-                    </li>
-                </ol>
-            </li>
-            <li>
-                <p>&#160;</p>
+                <table style="width: 100%;mc-table-style: url('Resources/TableStyles/PWTableStyle.css');" class="TableStyle-PWTableStyle" cellspacing="0">
+                    <col class="TableStyle-PWTableStyle-Column-Column1" style="width: 143px;" />
+                    <col class="TableStyle-PWTableStyle-Column-Column1" />
+                    <thead>
+                        <tr class="TableStyle-PWTableStyle-Head-Header1">
+                            <th class="TableStyle-PWTableStyle-HeadE-Column1-Header1">Blend Options</th>
+                            <th class="TableStyle-PWTableStyle-HeadD-Column1-Header1">Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="TableStyle-PWTableStyle-Body-Body1">
+                            <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Reset</td>
+                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">&#160;</td>
+                        </tr>
+                        <tr class="TableStyle-PWTableStyle-Body-Body2">
+                            <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2">Scale Fit</td>
+                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">&#160;</td>
+                        </tr>
+                        <tr class="TableStyle-PWTableStyle-Body-Body1">
+                            <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Swap</td>
+                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">&#160;</td>
+                        </tr>
+                        <tr class="TableStyle-PWTableStyle-Body-Body2">
+                            <td class="TableStyle-PWTableStyle-BodyB-Column1-Body2">Aspect Lock</td>
+                            <td class="TableStyle-PWTableStyle-BodyA-Column1-Body2">&#160;</td>
+                        </tr>
+                    </tbody>
+                </table>
             </li>
         </ol>
+        <p>&#160;</p>
+        <h3>Related Topics</h3>
     </body>
 </html>
