--- a/Content/WhatIsImageBlending.htm
+++ b/Content/WhatIsImageBlending.htm
@@ -4,11 +4,13 @@
     </head>
     <body>
         <h1>What is Image Blending?</h1>
-        <p>Image blending allows you to combine two images using various tools and techniques. </p>
+        <p>Image blending allows you to combine two images into a new image using various tools and techniques. </p>
+        <p>
+            <img src="Resources/Images/CombineImages2.png" class="standard" alt="Show Image A and Image B being combined into a new image" />
+        </p>
         <p>Below are the key features and steps:
 </p>
-        <p>(show two separate images and then combined image)
-</p>
+        <p>&#160;</p>
         <h2>Key Features
 </h2>
         <ul>
@@ -49,6 +51,7 @@
             </li>
         </ul>
         <p>&#160;</p>
+        <h3>Related Topics</h3>
         <p>
             <MadCap:xref href="BlendingTwoImages.htm">Blending Two Images</MadCap:xref> </p>
         <p><a href="BlendingModeList.htm">Blending Mode List </a> </p>
