--- a/Content/TestTopic.htm
+++ b/Content/TestTopic.htm
@@ -18,8 +18,8 @@
         </MadCap:dropDown>
         <h2>Adding and Stying Tables</h2>
         <table style="mc-table-style: url('Resources/TableStyles/PWTableStyle.css');width: 66%;" class="TableStyle-PWTableStyle" cellspacing="0">
-            <col style="width: 50%;" class="TableStyle-PWTableStyle-Column-Column1" />
-            <col style="width: 50%;" class="TableStyle-PWTableStyle-Column-Column1" />
+            <col style="width: 125px;" class="TableStyle-PWTableStyle-Column-Column1" />
+            <col style="width: 579px;" class="TableStyle-PWTableStyle-Column-Column1" />
             <thead>
                 <tr class="TableStyle-PWTableStyle-Head-Header1">
                     <th class="TableStyle-PWTableStyle-HeadE-Column1-Header1">Short Cut</th>
