blend images updates

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -5,7 +5,8 @@
     </head>
     <body>
         <h1>Blending Two Images</h1>
-        <h2>Load Images</h2>
+        <p>Begin with an image already loaded into PhotoWizard.</p>
+        <h2>Load Second Image</h2>
         <p>&#160;</p>
         <ol>
             <li>
@@ -15,18 +16,19 @@
                 <p>Next select Blend Images</p>
             </li>
             <li>
-                <p>Then from Blend Image toolbar select second image . <img src="Resources/Images/BlendImageToolbar.png" class="thumbnail" /></p>
+                <p>Then from Blend Image toolbar select the second image. <img src="Resources/Images/BlendImageToolbar.png" class="thumbnail" /></p>
             </li>
             <li>
-                <p>You now have two images to work with. Re-size, rotate, and reposition the image with the handles <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" /></p>
+                <p>You now have two images to work with. You can re-size, rotate, and reposition this second image with the handles <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" /></p>
             </li>
         </ol>
         <p>&#160;</p>
         <h2>Adjust Image Settings</h2>
         <ol>
             <li>
-                <p>Select triangle with three Dots to bring up Image options.<img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" /> </p>
-                <table style="width: 100%;mc-table-style: url('Resources/TableStyles/PWTableStyle.css');" class="TableStyle-PWTableStyle" cellspacing="0">
+                <p>Select the triangle with three Dots to bring up the following four blending options.<img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" /></p>
+                <p> </p>
+                <table style="mc-table-style: url('Resources/TableStyles/PWTableStyle.css');width: 66%;" class="TableStyle-PWTableStyle" cellspacing="0">
                     <col class="TableStyle-PWTableStyle-Column-Column1" style="width: 143px;" />
                     <col class="TableStyle-PWTableStyle-Column-Column1" />
                     <thead>
@@ -38,24 +40,26 @@
                     <tbody>
                         <tr class="TableStyle-PWTableStyle-Body-Body1">
                             <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Reset</td>
-                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">&#160;</td>
+                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Discard all changes to imported image.</td>
                         </tr>
                         <tr class="TableStyle-PWTableStyle-Body-Body2">
                             <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2">Scale Fit</td>
-                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">&#160;</td>
+                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Scale the imported image to fit the size of the first image.</td>
                         </tr>
                         <tr class="TableStyle-PWTableStyle-Body-Body1">
                             <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Swap</td>
-                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">&#160;</td>
+                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Swap the foreground and background images.</td>
                         </tr>
                         <tr class="TableStyle-PWTableStyle-Body-Body2">
                             <td class="TableStyle-PWTableStyle-BodyB-Column1-Body2">Aspect Lock</td>
-                            <td class="TableStyle-PWTableStyle-BodyA-Column1-Body2">&#160;</td>
+                            <td class="TableStyle-PWTableStyle-BodyA-Column1-Body2">Lock the aspect ratio of the imported image.</td>
                         </tr>
                     </tbody>
                 </table>
             </li>
         </ol>
+        <p>&#160;</p>
+        <h2>Chose Blending Mode and Opacity</h2>
         <p>&#160;</p>
         <h3>Related Topics</h3>
     </body>
