updated images and Blend Image Topic

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -5,12 +5,16 @@
     </head>
     <body>
         <h1>Blending Two Images</h1>
-        <p>Begin with an image already loaded into PhotoWizard.</p>
-        <h2>Load Second Image</h2>
-        <p>&#160;</p>
         <ol>
             <li>
-                <p>First select Tools <img src="Resources/Images/PW_BlendImages_Step1.png" class="thumbnail" style="width: 39px;height: 46px;" /></p>
+                <p>Start with one image loaded into PhotoWizard.</p>
+            </li>
+        </ol>
+        <h2>Load Second Image</h2>
+        <p>&#160;</p>
+        <ol MadCap:continue="true">
+            <li>
+                <p>Then select Tools <img src="Resources/Images/PW_BlendImages_Step1.png" class="thumbnail" style="width: 39px;height: 46px;" /></p>
             </li>
             <li>
                 <p>Next select Blend Images</p>
@@ -19,48 +23,64 @@
                 <p>Then from Blend Image toolbar select the second image. <img src="Resources/Images/BlendImageToolbar.png" class="thumbnail" /></p>
             </li>
             <li>
-                <p>You now have two images to work with. You can re-size, rotate, and reposition this second image with the handles <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" /></p>
+                <p>You now have two images to work with. Use touch gestures to re-size, rotate, and reposition the foreground image using the image handles <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" /></p>
             </li>
         </ol>
         <p>&#160;</p>
         <h2>Adjust Image Settings</h2>
-        <ol>
+        <ol MadCap:continue="true">
             <li>
-                <p>Select the triangle with three Dots to bring up the following four blending options.<img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" /></p>
-                <p> </p>
-                <table style="mc-table-style: url('Resources/TableStyles/PWTableStyle.css');width: 66%;" class="TableStyle-PWTableStyle" cellspacing="0">
-                    <col class="TableStyle-PWTableStyle-Column-Column1" style="width: 143px;" />
-                    <col class="TableStyle-PWTableStyle-Column-Column1" />
-                    <thead>
-                        <tr class="TableStyle-PWTableStyle-Head-Header1">
-                            <th class="TableStyle-PWTableStyle-HeadE-Column1-Header1">Blend Options</th>
-                            <th class="TableStyle-PWTableStyle-HeadD-Column1-Header1">Description</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="TableStyle-PWTableStyle-Body-Body1">
-                            <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Reset</td>
-                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Discard all changes to imported image.</td>
-                        </tr>
-                        <tr class="TableStyle-PWTableStyle-Body-Body2">
-                            <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2">Scale Fit</td>
-                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Scale the imported image to fit the size of the first image.</td>
-                        </tr>
-                        <tr class="TableStyle-PWTableStyle-Body-Body1">
-                            <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Swap</td>
-                            <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Swap the foreground and background images.</td>
-                        </tr>
-                        <tr class="TableStyle-PWTableStyle-Body-Body2">
-                            <td class="TableStyle-PWTableStyle-BodyB-Column1-Body2">Aspect Lock</td>
-                            <td class="TableStyle-PWTableStyle-BodyA-Column1-Body2">Lock the aspect ratio of the imported image.</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <p>Touch the menu item triangle with three dots above it to bring up the four blending options.<img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" /></p>
+            </li>
+        </ol>
+        <table style="mc-table-style: url('Resources/TableStyles/PWTableStyle.css');width: 66%;" class="TableStyle-PWTableStyle" cellspacing="0">
+            <col class="TableStyle-PWTableStyle-Column-Column1" style="width: 143px;" />
+            <col class="TableStyle-PWTableStyle-Column-Column1" />
+            <thead>
+                <tr class="TableStyle-PWTableStyle-Head-Header1">
+                    <th class="TableStyle-PWTableStyle-HeadE-Column1-Header1">Blend Options</th>
+                    <th class="TableStyle-PWTableStyle-HeadD-Column1-Header1">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Reset</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Discard all changes to the foreground image.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2">Scale Fit</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Scale the foreground image to fit the background image.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Swap</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Swap the foreground and background images.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyB-Column1-Body2">Aspect Lock</td>
+                    <td class="TableStyle-PWTableStyle-BodyA-Column1-Body2">Lock the aspect ratio of the foreground image.</td>
+                </tr>
+            </tbody>
+        </table>
+        <ol MadCap:continue="true">
+            <li>
+                <p>Use these blending options to control the behaviour of the foreground image or swap it with the background image.</p>
             </li>
         </ol>
         <p>&#160;</p>
         <h2>Chose Blending Mode and Opacity</h2>
+        <ol MadCap:continue="true">
+            <li>
+                <p>Now touch the top menu Gear Icon to bring up the blending modes and opacity dialogue. <img src="Resources/Images/PW_BlendImagesInst.png" class="thumbnail" /></p>
+            </li>
+            <li>
+                <p>Experiment with various blending modes and opacity.</p>
+            </li>
+            <li>
+                <p>When happy with your blended image touch the checkmark in the top menu bar to keep your results.</p>
+            </li>
+        </ol>
         <p>&#160;</p>
         <h3>Related Topics</h3>
+        <p>&#160;</p>
     </body>
 </html>
