updated notes and Related Topics

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -76,11 +76,22 @@
                 <p>Experiment with various blending modes and opacity.</p>
             </li>
             <li>
-                <p>When happy with your blended image touch the checkmark in the top menu bar to keep your results.</p>
+                <p>When happy with your blended image touch the check mark in the top menu bar to keep your results.</p>
             </li>
         </ol>
         <p>&#160;</p>
-        <h3>Related Topics</h3>
+        <h4>NOTES:</h4>
+        <p>The masked portion of your background or starting image will not appear in your blending image. </p>
+        <p>This gives you creative control over blending portions of your image.</p>
         <p>&#160;</p>
+        <h3>Related Topics</h3>
+        <p>
+            <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending?</MadCap:xref>
+        </p>
+        <p><a href="BlendingModeList.htm">Blending Mode List </a>
+        </p>
+        <p>
+            <MadCap:xref href="CreatingAnImageMask.htm">Creating an Image Mask</MadCap:xref>
+        </p>
     </body>
 </html>
