added notes, tip, examples, warnings

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -76,14 +76,15 @@
                 <p>Experiment with various blending modes and opacity.</p>
             </li>
             <li>
-                <p>When happy with your blended image touch the check mark in the top menu bar to keep your results.</p>
+                <p>When you are happy with your blended image touch the check mark in the top menu bar to keep your results.</p>
             </li>
         </ol>
         <p>&#160;</p>
         <h4>NOTES:</h4>
-        <p>The masked portion of your background or starting image will not appear in your blending image. </p>
-        <p>This gives you creative control over blending portions of your image.</p>
+        <div class="note">You have creative control over which parts of your images are combined by masking your background image. </div>
         <p>&#160;</p>
+        <div class="note">You have an unlimited undo action so feel free to explore different combinations</div>
+        <h3>&#160;</h3>
         <h3>Related Topics</h3>
         <p>
             <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending?</MadCap:xref>
