changed font colour and backgroud for div.note

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -14,10 +14,10 @@
         <p>&#160;</p>
         <ol MadCap:continue="true">
             <li>
-                <p>Then select Tools <img src="Resources/Images/PW_BlendImages_Step1.png" class="thumbnail" style="width: 39px;height: 46px;" /></p>
+                <p>First select Tools <img src="Resources/Images/PW_BlendImages_Step1.png" class="thumbnail" style="width: 39px;height: 46px;" /></p>
             </li>
             <li>
-                <p>Next select Blend Images</p>
+                <p>Then select Blend Images</p>
             </li>
             <li>
                 <p>Then from Blend Image toolbar select the second image. <img src="Resources/Images/BlendImageToolbar.png" class="thumbnail" /></p>
