added meta description for SEO

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -2,6 +2,7 @@
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
         <link href="Resources/TableStyles/PWTableStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
+        <meta name="description" content="Combine or blend two images using modes, masking and opacity." MadCap:metaTagSet="Meta Tag Sets/MetaTagSet.flmeta" />
     </head>
     <body>
         <h1>Blending Two Images</h1>
