--- a/Content/Welcome.htm
+++ b/Content/Welcome.htm
@@ -1,9 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
+        <link href="Resources/Stylesheets/WelcomeTopic.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Welcome</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <h1>Welcome to the Online Help for PhotoWizard</h1>
+        <MadCap:searchBarProxy data-mc-skin="/Project/Skins/SearchBar.flskn" />
+        <p>.</p>
+        <div class="NewRowClass1">
+            <div>
+                <p>Cell 1</p>
+            </div>
+            <div>
+                <p>Cell 2</p>
+            </div>
+            <div>
+                <p>Cell 3</p>
+            </div>
+        </div>
     </body>
 </html>
